--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,27 +7,34 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/iconround"
+        android:icon="@mipmap/download"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
+        <activity android:name=".activities.ProfileActivity" />
         <activity
-            android:name=".CatalogActivity"
+            android:name=".activities.CatalogActivity"
             android:theme="@style/CatalogTheme" />
-        <activity android:name=".SearchActivity" />
+        <activity android:name=".activities.SearchActivity" />
         <activity
-            android:name=".ResultVideoActivity"
+            android:name=".activities.ResultVideoActivity"
             android:theme="@style/CatalogTheme" />
-        <activity android:name=".ResultFoodActivity" />
-        <activity android:name=".RecipeInfoActivity"></activity>
+        <activity android:name=".activities.ResultFoodActivity" />
+        <activity
+            android:name=".activities.RecipeInfoActivity"
+            android:theme="@style/CatalogTheme">
+
+        </activity>
+        <activity
+            android:name=".activities.RandomFoodActivity"
+            android:theme="@style/CatalogTheme" />
     </application>
 
 </manifest>
