--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.android.tastease"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -21,6 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation "com.android.support:support-compat:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
